# graph-db-lite

./: .envexample  README.md  graphs.json  main.py  pyproject.toml  test_cli.py  wget-log
cli/: cli.py
models/: Graph.py  GraphEdge.py  GraphNode.py
persistance/: persistance.py
repository/: GraphRepository.py
service/: GraphService.py
utils/: config.py  constants.py  error.py  file.py
validators/: graph_validators.py
