[project]
name = "graphdblite"
version = "0.1.0"
description = "Persistent Lite Graph DB with Visualization"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "models*", "service*", "repository*", "validators*", "persistance*", "utils*"]
